# enterprise-architectures-and-patterns

.github/workflows/: ci.yaml
aggregate-pattern/: spin.toml
aggregate-pattern/aggregates-service/: Cargo.toml
aggregate-pattern/customers-service/: package-lock.json  package.json
api-with-cronjob/: spin-cron.toml  spin.toml
api-with-cronjob/api/: Cargo.toml
api-with-cronjob/cronjob/: Cargo.toml
api-with-cronjob/cronjob/src/: main.rs
application-variable-providers/azure-key-vault-provider/: Cargo.toml  spin.toml
application-variable-providers/vault-provider/: Cargo.toml  spin.toml
caching-rust/: Cargo.toml  spin.toml
content-negotiation-rust/: Cargo.toml  spin.toml
cors-rust/: Cargo.toml  spin.toml
cqrs-go/: spin.toml
cqrs-servicechaining/: spin.toml
distributed-tracing/: spin.toml
http-crud-go-sqlite/: spin.toml
http-crud-js-pg/: Makefile  README.md  package-lock.json  package.json  spin.toml
http-crud-js-pg/src/: config.js  handlers.js  index.js
http-crud-js-sqlite/: README.md  migrations.sql  package-lock.json  package.json  spin.toml
http-crud-js-sqlite/src/: handlers.js  index.js
http-crud-rust-mysql/: spin.toml
image-transformation/: spin.toml
load-testing-spin-with-k6/scenario/: spin.toml
long-running-jobs-over-http/api/: spin.toml
long-running-jobs-over-http/spin-worker/: spin.toml
pub-sub-polyglot/http-publisher-js/: package-lock.json  package.json  spin.toml
pub-sub-polyglot/subscriber-go/: spin.toml
pub-sub-polyglot/subscriber-rust/: spin.toml
signed-webhooks/webhook-producer/: Makefile  spin.toml
(+7 files in other folders)
